--- a/app/views/directorio.html
+++ b/app/views/directorio.html
@@ -2,7 +2,7 @@
     <h4 class="estasAquiTexto">
         <strong class="estasAquiColor">Estas aqui :</strong> Quienes Somos / <span class="ubicacionNavegacion">Directorio</span></h4>  
 </div>
-<div class="myContainer animated zoomInUp subTitleSpace">
+<div class="myContainer animated zoomInUp subTitleSpace innerBottom">
     <table class="table table-bordered table-hover table-responsive table-striped box-shadow">
         <thead class="dirTableFont">
             <tr>
@@ -84,8 +84,11 @@
     
     
     <table class="table table-bordered table-hover table-responsive table-striped box-shadow">
-        <h2 class="text-center">Enlaces Unidades Académicas</h2>
+        <h2 class="text-center"></h2>
         <thead class="dirTableFont">
+            <tr>
+                <th class="text-center" colspan="3" style="background-color: black; opacity: 0.8; color: white;">Enlaces Unidades Académicas</th>
+            </tr>
             <tr>
                 <th>Nombre:</th>
                 <th>Unidad:</th>
@@ -96,30 +99,29 @@
             <tr>
                 <td>Lic. Gladys López Cervantes</td>
                 <td>Enlace Unidad Académica San Luis Río Colorado</td>
-                <td>(653)534-42-55 Ext.1228</td>
+                <td>(653) 534-42-55 - <strong>Ext.</strong>1228</td>
             </tr>
             <tr>
                 <td>MAC.Maribel Corella García</td>
                 <td>Enlace Unidad Académica Magdalena</td>
-                <td>(632)322-40-85 Ext.4303</td>
+                <td>(632) 322-40-85 - <strong>Ext.</strong>4303</td>
             </tr>
             <tr>
                 <td>Lic. Eduardo García Burgueño</td>
                 <td>Enlace Unidad Académica Hermosillo</td>
-                <td>(662)215-37-78 / 215-85-93</td>
+                <td>(662) 215-37-78 / 215-85-93</td>
             </tr>
             <tr>
                 <td>Lic. Karla Beatriz Espinoza Gutierrez</td>
                 <td>Enlace Unidad Académica Benito Juárez</td>
-                <td>(643)435-00-28 Ext.5302</td>
+                <td>(643) 435-00-28 - <strong>Ext.</strong>5302</td>
             </tr>
             <tr>
                 <td>LSIA. Maria Susana García Rodríguez</td>
                 <td>Enlace Unidad Académica Navojoa</td>
-                <td>(642)422-75-76</td>
+                <td>(642) 422-75-76</td>
             </tr>
         </tbody>
     </table>
-        <h3 class="text-center" style="margin-bottom: -90px;">Conmutador: 689-01-00</h3>
-        <div style="padding-bottom: 140px;"></div>
+        <h4 class="text-center">Conmutador: 689-01-00</h4>
 </div>
