--- a/app/views/main.html
+++ b/app/views/main.html
@@ -14,7 +14,7 @@
   <!-- 
      Wrapper para slides
                      -->
-  <div class="carousel-inner innerInverseTop">
+  <div class="carousel-inner innerInverseTop" style="border: 0px solid transparent!important">
     <!--~~~~~~~~
     PRIMER ITEM
     ~~~~~~~~~-->
