--- a/app/views/organigrama.html
+++ b/app/views/organigrama.html
@@ -4,15 +4,15 @@
 </div>
 
 <div class="myContainer inner  subTitleSpace">   
-    <div class="row">
+    <div class="row"> 
         <!--
         ===================================================
                             Carlos Calderon
         ===================================================
         -->
         <div class="col-xs-4 colxs4Responsive text-center">
-           <figure class="figure animated tada">
-                <img class="imgFormat" src="/images/organigrama/default.jpg" alt="">
+           <figure class="figure" id="carlos">
+                <img class="imgFormat" src="/images/organigrama/default.jpg" alt="carlos">
                 <figcaption class="figcaption">Contribuir el desarrollo Institucional de forma equilibrada y de acuerdo a los modelos de planeación universitaria, con base en las líneas de acción educativa para el nivel superior de carácter estatal y nacional, a fin de darle atención prioritaria al cumplimiento de las funciones académicas institucionales.</figcaption>
             </figure>
             <h3><strong>Lic. Carlos Calderón Saldaña</strong></h3>
@@ -24,8 +24,8 @@
         ===================================================
         -->
        <div class="col-xs-4 colxs4Responsive text-center">
-           <figure class="figure animated tada flipInY">
-                <img class="imgFormat" src="/images/organigrama/default.jpg" alt="">
+           <figure class="figure" id="jesus">
+                <img class="imgFormat" src="/images/organigrama/default.jpg" alt="jesus">
                 <figcaption class="figcaption">Desarrollar los procesos de planeación, programación y evaluación institucional, de acuerdo a los lineamientos establecidos y de acuerdo a los fines académicos y de gestión de la Universidad.
                 </figcaption>
             </figure>
@@ -38,8 +38,8 @@
         ===================================================
         -->
        <div class="col-xs-4 colxs4Responsive text-center">
-           <figure class="figure animated tada">
-                <img class="imgFormat" src="/images/organigrama/defaultw.jpg" alt="">
+           <figure class="figure" id="celeste">
+                <img class="imgFormat" src="/images/organigrama/defaultw.jpg" alt="celeste">
                 <figcaption class="figcaption">Contribuir al proceso de desarrollo
                     organizacional y funcional de la Universidad, a través de la aplicación de técnicas y herramientas de mejora administrativas que permitan el logro de los objetivos institucionales.
                 </figcaption>
@@ -47,19 +47,22 @@
             <h3><strong>Lic. Celeste Vásquez Encinas</strong></h3>
             <p class="orgAreaPersonal"><strong>COORDINACIÓN DE ORGANIZACIÓN Y ESTUDIOS INSTITUCIONALES</strong></p>
        </div>
+     
        <!--
         ===================================================
                             Rosario Terrazas
         ===================================================
         -->
        <div class="col-xs-4 colxs4Responsive text-center">
-           <figure class="figure animated tada">
-                <img class="imgFormat" src="/images/organigrama/r.jpg" alt="">
+           <figure class="figure visibilityHidden" id="rosario">
+                <img class="imgFormat" src="/images/organigrama/r.jpg" alt="rosario">
                 <figcaption class="figcaption">Fortalecer el proceso de enseñanza-aprendizaje y la actividad administrativa de la Universidad, por medio de la promoción, coordinación y seguimiento de la evaluación, acreditación y certificación de los programas y los procesos académicos-administrativos para el logro de los objetivos de calidad Institucional.
                 </figcaption>
             </figure>
-            <h3><strong>Mtra. Rosario Terrazas Verdugo</strong></h3>
-            <p class="orgAreaPersonal"><strong>COORDINACIÓN DE CALIDAD INSTITUCIONAL</strong></p>
+            <span class="visibilityHidden" id="rosarioText">
+                <h3><strong>Mtra. Rosario Terrazas Verdugo</strong></h3>
+                <p class="orgAreaPersonal"><strong>COORDINACIÓN DE CALIDAD INSTITUCIONAL</strong></p>
+            </span>
        </div>
         <!--
         ===================================================
@@ -67,13 +70,15 @@
         ===================================================
         -->
        <div class="col-xs-4 colxs4Responsive text-center">
-           <figure class="figure animated tada">
-                <img class="imgFormat" src="/images/organigrama/d.jpg" alt="">
+           <figure class="figure visibilityHidden" id="dyke">
+                <img class="imgFormat" src="/images/organigrama/d.jpg" alt="dyke">
                 <figcaption class="figcaption">Proporcionar información útil a las autoridades universitarias para la toma de decisiones en el mejoramiento de la calidad educativa y del desempeño institucional.
                 </figcaption>
             </figure>
-            <h3><strong>Lic.Manuel Dyke García</strong></h3>
-            <p class="orgAreaPersonal"><strong>COORDINACIÓN DE EVALUACIÓN INSTITUCIONAL</strong></p>
+            <span class="visibilityHidden" id="dykeText">
+                <h3><strong>Lic.Manuel Dyke García</strong></h3>
+                <p class="orgAreaPersonal"><strong>COORDINACIÓN DE EVALUACIÓN INSTITUCIONAL</strong></p>
+            </span>
        </div>
        <!--
         ===================================================
@@ -81,14 +86,16 @@
         ===================================================
         -->
        <div class="col-xs-4 colxs4Responsive text-center">
-           <figure class="figure animated tada">
-                <img class="imgFormat" src="/images/organigrama/defaultw.jpg" alt="">
+           <figure class="figure visibilityHidden" id="unknow">
+                <img class="imgFormat" src="/images/organigrama/defaultw.jpg" alt="unknow">
                 <figcaption class="figcaption">Fortalecer la gestión de fondos extraordinarios por medio del proceso participativo de la 
                     planeación estratégica para dar cumplimiento a los diferentes programas educativos y satisfacer las demandas y compromisos institucionales de la Universidad.
                 </figcaption>
             </figure>
-            <h3><strong>Miembro Desconocido</strong></h3>
-            <p class="orgAreaPersonal"><strong>COORDINACIÓN DE GESTIÓN DE FONDOS</strong></p>
+            <span class="visibilityHidden" id="unknowText">
+                <h3><strong>Miembro Desconocido</strong></h3>
+                <p class="orgAreaPersonal"><strong>COORDINACIÓN DE GESTIÓN DE FONDOS</strong></p>
+            </span>
        </div>
     </div>    
 </div>
