--- a/app/views/directorio.html
+++ b/app/views/directorio.html
@@ -1,8 +1,8 @@
-<div class="estasAqui innerEstasAqui">
+<div class="estasAqui">
     <h4 class="estasAquiTexto">
         <strong class="estasAquiColor">Estas aqui :</strong> Quienes Somos / <span class="ubicacionNavegacion">Directorio</span></h4>  
 </div>
-<div class="myContainer animated zoomInUp subTitleSpace innerBottom">
+<div class="myContainer animated zoomInUp subTitleSpace innerBottom innerTopOn">
     <table class="table table-bordered table-hover table-responsive table-striped box-shadow">
         <thead class="dirTableFont">
             <tr>
