--- a/app/views/directorio.html
+++ b/app/views/directorio.html
@@ -2,7 +2,7 @@
     <h4 class="estasAquiTexto">
         <strong class="estasAquiColor">Estas aqui :</strong> Quienes Somos / <span class="ubicacionNavegacion">Directorio</span></h4>  
 </div>
-<div class="myContainer animated zoomInUp subTitleSpace innerBottom innerTopOn">
+<div class="myContainer animated zoomInUp subTitleSpace innerBottomOn innerTopOn">
     <table class="table table-bordered table-hover table-responsive table-striped box-shadow">
         <thead class="dirTableFont">
             <tr>
