--- a/app/views/organigrama.html
+++ b/app/views/organigrama.html
@@ -3,7 +3,7 @@
         <strong class="estasAquiColor">Estas aqui :</strong> Quienes Somos / <span class="ubicacionNavegacion">Organigrama</span></h4>  
 </div>
 
-<div class="myContainer inner  subTitleSpace">   
+<div class="myContainer innerBottomOn  subTitleSpace">   
     <div class="row"> 
         <!--
         ===================================================
@@ -11,7 +11,7 @@
         ===================================================
         -->
         <div class="col-xs-4 colxs4Responsive text-center">
-           <figure class="figure" id="carlos">
+           <figure class="figure animated flipInY" id="carlos">
                 <img class="imgFormat" src="/images/organigrama/default.jpg" alt="carlos">
                 <figcaption class="figcaption">Contribuir el desarrollo Institucional de forma equilibrada y de acuerdo a los modelos de planeación universitaria, con base en las líneas de acción educativa para el nivel superior de carácter estatal y nacional, a fin de darle atención prioritaria al cumplimiento de las funciones académicas institucionales.</figcaption>
             </figure>
@@ -24,7 +24,7 @@
         ===================================================
         -->
        <div class="col-xs-4 colxs4Responsive text-center">
-           <figure class="figure" id="jesus">
+           <figure class="figure animated flipInY" id="jesus">
                 <img class="imgFormat" src="/images/organigrama/default.jpg" alt="jesus">
                 <figcaption class="figcaption">Desarrollar los procesos de planeación, programación y evaluación institucional, de acuerdo a los lineamientos establecidos y de acuerdo a los fines académicos y de gestión de la Universidad.
                 </figcaption>
@@ -38,7 +38,7 @@
         ===================================================
         -->
        <div class="col-xs-4 colxs4Responsive text-center">
-           <figure class="figure" id="celeste">
+           <figure class="figure animated flipInY" id="celeste">
                 <img class="imgFormat" src="/images/organigrama/defaultw.jpg" alt="celeste">
                 <figcaption class="figcaption">Contribuir al proceso de desarrollo
                     organizacional y funcional de la Universidad, a través de la aplicación de técnicas y herramientas de mejora administrativas que permitan el logro de los objetivos institucionales.
