--- a/app/views/main.html
+++ b/app/views/main.html
@@ -62,14 +62,14 @@
     <!--*************************************************************************************
                                             PLANEACIÓN
     ***************************************************************************************-->
-<div class="jumbotron innerInverseBottom" style="background-color: #ecf0f1; color: #34302d;">
+<div class="jumbotron " style="background-color: #ecf0f1; color: #34302d;">
     <div class="animated fadeInLeft">
         <h1 class="display-3">PLANEACIÓN</h1>
         <center>
            <hr class="lineTitle">
         </center>
         <img ng-src="/images/inicio/plan.png" class="animated flip"  width="10.3%" alt="planning">
-        <p class="container text-justify">La planeación es entendida como parte integral del funcionamiento institucional, vinculado estrechamente con la programación, operación y evaluación,
+        <p class="myContainer planeacionText">La planeación es entendida como parte integral del funcionamiento institucional, vinculado estrechamente con la programación, operación y evaluación,
         y por consiguiente, es una tarea primordial y una responsabilidad compartida por todas sus unidades académicas y unidades administrativas de rectoría,
         las cuales, de acuerdo a su ámbito de competencia, elaborarán los planes específicos y generaran los reportes de evaluación pertinentes, que integrarán
         los productos de la planeación y la evaluación institucional.
