normatividad abrir pdf target blank

--- a/app/views/normatividad.html
+++ b/app/views/normatividad.html
@@ -12,13 +12,13 @@
             <h2><strong>{{vm.pdf[0].titulo}}</strong></h2>          
          </div>
          <div class="col-xs-4 text-center colxs4Responsive divBorderRight">
-            <a href="{{vm.pdf[1].src}}" class="animated normImg1" target="frame_norm">
+            <a href="{{vm.pdf[1].src}}" class="animated normImg1" target="_blank">
                 <img src="{{vm.pdf[1].img}}" class="img-circle" style="border:7px solid white; box-shadow: 0px 2px 4px 4px lightgrey;" alt="" width="50%">
             </a>
             <h2><strong>{{vm.pdf[1].titulo}}</strong></h2>         
          </div>
          <div class="col-xs-4 text-center colxs4Responsive">
-            <a href="{{vm.pdf[2].src}}" class="animated normImg1" target="frame_norm">
+            <a href="{{vm.pdf[2].src}}" class="animated normImg1" target="_blank">
                 <img src="{{vm.pdf[2].img}}" class="img-circle" style="border:7px solid white; box-shadow: 0px 2px 4px 4px lightgrey;" alt="" width="50%">
             </a>
             <h2><strong>{{vm.pdf[2].titulo}}</strong></h2>
