--- a/app/views/sgc.html
+++ b/app/views/sgc.html
@@ -1,6 +1,6 @@
 <div class="estasAqui">
     <h4 class="estasAquiTexto">
-        <strong class="estasAquiColor">Estas aqui :</strong> Quienes Somos / <span class="ubicacionNavegacion">Sistemas de Gestión de Calidad</span></h4>
+        <span id="responsive"><strong class="estasAquiColor">Estas aqui :</strong> Quienes Somos / <span class="ubicacionNavegacion">Sistemas de Gestión de Calidad</span></h4></span>
 		<a ng-href="#/login" class="btn btn-warning btn-lg pull-right btnSgc">Login</a>  
 </div>
 <!--
@@ -9,7 +9,7 @@
 ==============================
 -->	
 <div  class="row banner innerBottomOn">
-	<div class="col-xs-6">
+	<div class="col-xs-6 colXs6Responsive">
 		<div class="bannerText">
 			<h1><strong>NUESTRO PROCESO DE TRABAJO</strong></h1>
 			<p class="bannerSubTitle">Llevamos un estricto proceso de trabajo basado en las normas ISO, lo cual nos hace una institución 
@@ -18,7 +18,7 @@
 		</div>
 		<center><img src="/images/sgc/proceso.png" class="img-responsive animated imgProceso"></center>
 	</div>
-	<div class="col-xs-6">
+	<div class="col-xs-6 colXs6Responsive">
 		<img src="/images/sgc/imagen1.png" class="img-responsive"  alt="banner">
 	</div>
 </div>
@@ -29,7 +29,7 @@
 ==============================
 -->	
 	<div class="row rowSpace">
-		<div class="col-xs-6">
+		<div class="col-xs-6 colXs6Responsive">
 			<img src="/images/sgc/u2.jpg" class="visibilityHidden sgcImages" id="imgMision" alt="MISIÓN">
 		</div>
 		<div class="col-xs-6 visibilityHidden" id="textMision">
@@ -48,14 +48,14 @@
 ==============================
 -->
 	<div class="row rowSpace">
-		<div class="col-xs-6  visibilityHidden" id="textVision">
+		<div class="col-xs-6  visibilityHidden colXs6Responsive" id="textVision">
 			<h2 class="sgcTitleImages">VISIÓN 2016-2020</h2>
 			<hr class="lineTitleSgc">
 			<h3>La Universidad Estatal de Sonora es reconocida por su calidad en el desempeño de 
 				las funciones de docencia, vinculación, extensión e investigación, y por la
 				 excelencia de sus egresados.</h3>
 		</div>
-		<div class="col-xs-6">
+		<div class="col-xs-6 colXs6Responsive">
 			<img src="/images/sgc/vision3.jpg" id="imgVision"  class="visibilityHidden sgcImages" alt="VISIÓN">
 		</div>
 	</div>
@@ -65,10 +65,10 @@
 ==============================
 -->
 	<div class="row rowSpace">
-		<div class="col-xs-6">
+		<div class="col-xs-6 colXs6Responsive">
 			<img src="/images/sgc/vision.jpg" id="imgPoliticaDeCalidad" class="visibilityHidden sgcImages" alt="POLÍTICA DE CALIDAD">
 		</div>
-		<div class="col-xs-6 visibilityHidden" id="textPoliticaDeCalidad">
+		<div class="col-xs-6 visibilityHidden colXs6Responsive" id="textPoliticaDeCalidad">
 			<h2 class="sgcTitleImages">POLÍTICA DE CALIDAD</h2>
 			<hr class="lineTitleSgc">
 			<h3>“La Universidad Estatal de Sonora promueve la formación profesional de sus 
@@ -83,7 +83,7 @@
 ==============================
 -->
 	<div class="row rowSpace">
-		<div class="col-xs-6 visibilityHidden" id="textObjetivosDeCalidad">
+		<div class="col-xs-6 visibilityHidden colXs6Responsive" id="textObjetivosDeCalidad">
 			<h2 class="sgcTitleImages">OBJETIVOS DE CALIDAD</h2>
 			<hr class="lineTitleSgc">
 			<h3>
@@ -100,7 +100,7 @@
 				</ul>
 			</h3>
 		</div>
-		<div class="col-xs-6">
+		<div class="col-xs-6 colXs6Responsive">
 			<img src="/images/sgc/objetivo.jpg" id="imgObjetivosDeCalidad" class="visibilityHidden sgcImages" alt="OBJETIVOS DE CALIDAD">
 		</div>
 	</div>
