--- a/app/views/directorio.html
+++ b/app/views/directorio.html
@@ -6,9 +6,12 @@
     <table class="table table-bordered table-hover table-responsive table-striped box-shadow">
         <thead class="dirTableFont">
             <tr>
+                <th class="text-center" colspan="4" style="background-color: black; opacity: 0.8; color: white;">Personal De Planeación</th>
+            </tr>
+            <tr>
                 <th>Nombre:</th>
                 <th>Puesto:</th>
-                <th>Area:</th>
+                <th>&Aacute;rea:</th>
                 <th>Extensión:</th>
             </tr>
         </thead>
@@ -99,12 +102,12 @@
             <tr>
                 <td>Lic. Gladys López Cervantes</td>
                 <td>Enlace Unidad Académica San Luis Río Colorado</td>
-                <td>(653) 534-42-55 - <strong>Ext.</strong>1228</td>
+                <td>(653) 534-42-55 - Ext.1228</td>
             </tr>
             <tr>
                 <td>MAC.Maribel Corella García</td>
                 <td>Enlace Unidad Académica Magdalena</td>
-                <td>(632) 322-40-85 - <strong>Ext.</strong>4303</td>
+                <td>(632) 322-40-85 - Ext.4303</td>
             </tr>
             <tr>
                 <td>Lic. Eduardo García Burgueño</td>
@@ -114,7 +117,7 @@
             <tr>
                 <td>Lic. Karla Beatriz Espinoza Gutierrez</td>
                 <td>Enlace Unidad Académica Benito Juárez</td>
-                <td>(643) 435-00-28 - <strong>Ext.</strong>5302</td>
+                <td>(643) 435-00-28 - Ext.5302</td>
             </tr>
             <tr>
                 <td>LSIA. Maria Susana García Rodríguez</td>
