--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -235,6 +235,10 @@ h4.estasAquiTexto{
     color: #f39c12;  
     opacity: 0.7;
 }
+.navbar-default .navbar-nav>li>a:focus {/*color menú titulos*/
+    color: #f39c12;  
+    opacity: 0.7;
+}
 .navbar-default .navbar-collapse, .navbar-default .navbar-form {
     border-color: transparent!important;
 }
@@ -248,7 +252,7 @@ h4.estasAquiTexto{
 */
 
 
-.dropdown-menu .sub-menu {
+.dropdown-menu .sub-menu{
     left: 100%;
     position: absolute;
     top: 23%;
@@ -256,13 +260,28 @@ h4.estasAquiTexto{
     margin-top: -1px;
     border-radius: 0px; 
 }
-
+.dropdown-menu .sub-menu3{
+    left: 100%;
+    position: absolute;
+    top: 23%;
+    visibility: hidden;
+    margin-top: -1px;
+    border-radius: 0px; 
+}
 .presupuesto{
   top: 46% !important;
 }
-
+.acreditacion{
+  top: 0 !important;
+}
+.egresos{
+  top: 48% !important;
+}
 
 .dropdown-menu li:hover .sub-menu {
+    visibility: visible;
+}
+.sub-menu li:hover .sub-menu3 {
     visibility: visible;
 }
 
@@ -294,6 +313,7 @@ h4.estasAquiTexto{
     top: 11px;
     left: -6px;
 }
+
 /*---*/
 .dropdown-menu > li > a:hover, .dropdown-menu > li > a:focus {
   color: #5e292a!important;
