organismosAcre y detalles del la pagina

--- a/app/views/directorio.html
+++ b/app/views/directorio.html
@@ -1,3 +1,8 @@
+<script>
+    $(document).ready(function () { //  this function send top page after load
+        $(window).scrollTop(0);
+    }); 
+</script>
 <div class="estasAqui">
     <h4 class="estasAquiTexto">
         <strong class="estasAquiColor">Estas aqui :</strong> Quienes Somos / <span class="ubicacionNavegacion">Directorio</span></h4>  
@@ -6,12 +11,11 @@
     <table class="table table-bordered table-hover table-responsive table-striped box-shadow">
         <thead class="dirTableFont">
             <tr>
-                <th class="text-center" colspan="4" style="background-color: black; opacity: 0.8; color: white;">Personal De Planeación</th>
+                <th class="text-center" colspan="4" style="background-color: black; opacity: 0.8; color: white;">Personal de Planeación</th>
             </tr>
             <tr>
                 <th>Nombre:</th>
                 <th>Puesto:</th>
-                <th>&Aacute;rea:</th>
                 <th>Extensión:</th>
             </tr>
         </thead>
@@ -19,67 +23,61 @@
             <tr>
                 <td>Lic. Carlos Calderón Saldaña</td>
                 <td>Secretario General de Planeación</td>
-                <td>Secretaría General de planeación</td>
                 <td>8401</td>
             </tr>
             <tr>
                 <td>Lic. Carmen Raquel Torres Miranda</td>
                 <td>Secretaria</td>
-                <td>Secretaría General de planeación</td>
                 <td>8402</td>
             </tr>
             <tr>
                 <td>Lic. Maria del Carmen Garcia Casanova</td>
                 <td>Secretaria</td>
-                <td>Secretaría General de planeación</td>
                 <td>8409</td>
             </tr>
             <tr>
-                <td>M.C. Jesús Manuel Velázquez Castellanos</td>
+                <td></td>
                 <td>Coordinador de Planeación</td>
-                <td>Planeación</td>
                 <td>8405</td>
             </tr>
             <tr>
-                <td>Lic. Aracely Aburto Tapia</td>
-                <td>Coordinador de Planeación</td>
-                <td>Planeación</td>
+                <td>Lic. Araceli Aburto Tapia</td>
+                <td>Coordinación de Planeación</td>
                 <td>8403</td>
             </tr>
             <tr>
                 <td>Lic. Celeste Vásquez Encinas</td>
                 <td>Coordinador de Organización y Estudios Institucionales</td>
-                <td>Organización y estudios institucionales</td>
                 <td>8404</td>
             </tr>
             <tr>
                 <td>Lic. Diego Castellanos Castillo</td>
-                <td>Coordinador de Organización y Estudios Institucionales</td>
-                <td>Organización y estudios institucionales</td>
+                <td>Coordinación de Organización y Estudios Institucionales</td>
                 <td>8404</td>
             </tr>
             <tr>
                 <td>Mtra. Rosario Terrazas Verdugo</td>
-                <td>Coordinador de calidad institucional</td>
-                <td>Calidad institucional</td>
+                <td>Coordinador de Calidad Institucional</td>
                 <td>8406</td>
             </tr>
             <tr>
+                <td>Lic. Jesús Manuel Velazquez Castellanos</td>
+                <td>Coordinación de Calidad Institucional</td>
+                <td>8405</td>
+            </tr>
+            <tr>
                 <td>Lic. Manuel Roberto Dyke García</td>
-                <td>Coordinador de evaluación institucional</td>
-                <td>Evaluación institucional</td>
+                <td>Coordinador de Evaluación Institucional</td>
                 <td>8402</td>
             </tr>
             <tr>
                 <td>Lic. Sergio Araiza</td>
-                <td>Coordinador de evaluación institucional</td>
-                <td>Evaluación institucional</td>
+                <td>Coordinación de Evaluación Institucional</td>
                 <td>8407</td>
             </tr>
             <tr>
                 <td>Lic. Ivan Orestes Alvarez Vega</td>
-                <td>No Especificado</td>
-                <td>Gestión de fondos</td>
+                <td>Coordinación de Gestión de Fondos</td>
                 <td>8403</td>
             </tr>
         </tbody>
@@ -100,17 +98,17 @@
         </thead>
         <tbody>
             <tr>
-                <td>Lic. Gladys López Cervantes</td>
+                <td>Lic. Melina Zavala Armas</td>
                 <td>Enlace Unidad Académica San Luis Río Colorado</td>
                 <td>(653) 534-42-55 - Ext.1228</td>
             </tr>
             <tr>
-                <td>MAC.Maribel Corella García</td>
+                <td>MAC. Maribel Corella García</td>
                 <td>Enlace Unidad Académica Magdalena</td>
                 <td>(632) 322-40-85 - Ext.4303</td>
             </tr>
             <tr>
-                <td>Lic. Eduardo García Burgueño</td>
+                <td>Lic. Jose Alberto Salado Rodriguez</td>
                 <td>Enlace Unidad Académica Hermosillo</td>
                 <td>(662) 215-37-78 / 215-85-93</td>
             </tr>
@@ -126,5 +124,5 @@
             </tr>
         </tbody>
     </table>
-        <h4 class="text-center">Conmutador: 689-01-00</h4>
+        <h4 class="text-center">Conmutador: 689-01-00 Ext. 8402</h4>
 </div>
