--- a/app/views/inicio.html
+++ b/app/views/inicio.html
@@ -59,16 +59,13 @@
     </div>
   </div> 
 </div>
-    <!--*************************************************************************************
-                                            PLANEACIÓN
-    ***************************************************************************************-->
+<!--*************************************************************************************
+                                        PLANEACIÓN
+***************************************************************************************-->
 <div class="jumbotron " style="background-color: #ecf0f1; color: #34302d;">
     <div class="animated fadeInLeft">
-        <h1 class="display-3">PLANEACIÓN</h1>
-        <center>
-           <hr class="lineTitle">
-        </center>
-        <img ng-src="/images/inicio/plan.png" class="animated flip"  width="10.3%" alt="planning">
+        <h1 class="display-3">{{vm.title}}</h1>
+        <img ng-src="/images/inicio/planning.png" style="padding: 3px; border: 3px solid #f39c12; border-radius: 50%;" class="animated flip"  width="10.3%" alt="planning">
         <p class="myContainer planeacionText">La planeación es entendida como parte integral del funcionamiento institucional, vinculado estrechamente con la programación, operación y evaluación,
         y por consiguiente, es una tarea primordial y una responsabilidad compartida por todas sus unidades académicas y unidades administrativas de rectoría,
         las cuales, de acuerdo a su ámbito de competencia, elaborarán los planes específicos y generaran los reportes de evaluación pertinentes, que integrarán
