--- a/app/views/sgc.html
+++ b/app/views/sgc.html
@@ -1,7 +1,7 @@
 <div class="estasAqui">
     <h4 class="estasAquiTexto">
         <span id="responsive"><strong class="estasAquiColor">Estas aqui :</strong> Quienes Somos / <span class="ubicacionNavegacion">Sistemas de Gestión de Calidad</span></h4></span>
-		<button data-toggle="modal" data-target="#loginModal" class="btn btn-warning btn-lg pull-right btnSgc">Login</button>  
+		<a  ng-href="http://35.184.92.106:8000/accounts/login/?next=/" target="_blank" class="btn btn-warning btn-lg pull-right btnSgc">Login</a>  
 </div>
 <!--
 ==============================
@@ -42,18 +42,10 @@
             Banner
 ==============================
 -->	
-<div  class="row banner innerBottomOn">
-	<div class="col-xs-6 colXs6Responsive">
-		<div class="bannerText">
-			<h1><strong>NUESTRO PROCESO DE TRABAJO</strong></h1>
-			<p class="bannerSubTitle">Llevamos un estricto proceso de trabajo basado en las normas ISO, lo cual nos hace una institución 
-									  eficiente y de primera calidad.
-			</p>
-		</div>
-		<center><img src="/images/sgc/proceso.png" class="img-responsive animated imgProceso"></center>
-	</div>
-	<div class="col-xs-6 colXs6Responsive">
-		<img src="/images/sgc/imagen1.png" class="img-responsive animated bounceInDown"  alt="banner">
+<div  class="row  innerBottomOn">
+	<div class="col-xs-2"></div>
+	<div class="col-xs-8 colXs6Responsive">
+		<img src="/images/sgc/imagen1.png" class="img-responsive  banner animated bounceInDown "   alt="banner">
 	</div>
 </div>
 <div class="myContainer subTitleSpace innerBottomOn">
@@ -64,7 +56,7 @@
 -->	
 	<div class="row rowSpace">
 		<div class="col-xs-6 colXs6Responsive">
-			<img src="/images/sgc/u2.jpg" class="visibilityHidden sgcImages" id="imgMision" alt="MISIÓN">
+			<img src="/images/sgc/mision2.jpg"  class="visibilityHidden sgcImages" id="imgMision" alt="MISIÓN">
 		</div>
 		<div class="col-xs-6 visibilityHidden" id="textMision">
 			<h2 class="sgcTitleImages">MISIÓN</h2>
