--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -579,7 +579,12 @@ hr.lineTitle{/*linea para dividir titulos principales de los contenidos*/
 .btnSgc:hover{
   background-color: #f39c12 !important;
 }
-
+.banner{
+  width: 100%;
+  height: 100%;
+  margin-top: -1px!important;
+  margin: 5px;
+}
 @media screen and (max-width: 980px){
   .btnSgc{
     margin-top: -47px;
@@ -589,27 +594,25 @@ hr.lineTitle{/*linea para dividir titulos principales de los contenidos*/
   }
 }
 
-div .banner{
-  background-color: #ecf0f1;
-}
-div.bannerText{
+
+div.bannerText{/*sin usar*/
   border-left: 4px solid rgba(94, 41, 42,.9);
   padding-left: 10px;
   margin-left: 10px;
   text-align: justify;
 }
-p.bannerSubTitle{
+p.bannerSubTitle{/*sin usar*/
   padding-right: 30px;
   font: 17px arial;
 }
-.imgProceso{
+.imgProceso{/*sin usar*/
   margin-top: 30px;
 }
 
-.imgProceso:hover{
+.imgProceso:hover{/*sin usar*/
   animation-name: jello;
 }
-@media screen and (max-width:980px){
+@media screen and (max-width:980px){/*sin usar*/
   .imgProceso{
   margin-top: 5px;
   }
@@ -775,4 +778,94 @@ hr.lineTitleSgc{/*linea para dividir titulos principales de los contenidos*/
   color: white;
 }
 
+/*
+============================
+============================
+Acreditacion/organismos acreditadores
+============================
+============================
+*/
+
+.testimonial{
+  margin-bottom: 10px;
+}
+
+.testimonial-section {
+  width: 100%;
+  height: auto;
+  padding: 15px;
+  -webkit-border-radius: 5px;
+  -moz-border-radius: 5px;
+  border-radius: 5px;
+  position: relative;
+  border: 3px solid #fff;
+  text-align: justify;
+}
+.testimonial-section:after {
+  top: 100%;
+  left: 50px;
+  border: solid transparent;
+  content: " ";
+  position: absolute;
+  border-top-color: #fff;
+  border-width: 15px;
+  margin-left: -15px;
+}
+
+.testimonial-desc {
+  margin-top: 20px;
+  text-align:left;
+  padding-left: 5px;
+}
+.testimonial-desc img {
+  border: 3px solid #f5f5f5;
+  border-radius: 150px;
+  height: 100px;
+  padding: 3px;
+  width: 100px;
+  display:inline-block;
+  vertical-align: top;
+}
+
+.testimonial-writer{
+  display: inline-block;
+  vertical-align: top;
+  padding-left: 10px;
+}
+
+.testimonial-writer-name{
+  font-weight: bold;
+}
+
+.testimonial-writer-designation{
+  font-size: 85%;
+}
+
+.testimonial-writer-company{
+  font-size: 95%;
+}
+/*---- Outlined Styles ----*/
+
+.testimonial.testimonial-default .testimonial-section{
+  border-color: #777;
+}
+
+.testimonial.testimonial-default .testimonial-section:after{
+  border-top-color: #777;
+}
+
+
+
+.testimonial.testimonial-default .testimonial-desc img{
+    border-color: #777;
+}
+
+.testimonial.testimonial-default .testimonial-writer-name{
+    color: #777;
+}
+
+
+
+ 
+   
 
