cambios en menu estadistica

--- a/app/views/inicio.html
+++ b/app/views/inicio.html
@@ -1,7 +1,7 @@
 <!--*************************************************************************************
                                               SLIDER
     ***************************************************************************************-->
-    <div class="carousel fade-carousel slide" data-ride="carousel" data-interval="7000" id="bs-carousel">
+    <div class="carousel fade-carousel slide" data-ride="carousel" data-interval="5000" id="bs-carousel">
   <!--
      Indicadores
                 -->
@@ -26,7 +26,7 @@
             <h1>Secretaría General De Planeación</h1>        
             <h3>Somos Parte Integral Del Funcionamiento institucional</h3>
         </hgroup>
-        <button class="btn btn-hero btn-lg" role="button"><strong>Conócenos</strong></button>
+        <a ng-href="#/organigrama" class="btn btn-hero btn-lg"><strong>Conócenos</strong></a>
       </div>
     </div>
     <!--~~~~~~~~
@@ -40,7 +40,7 @@
             <h1>nuestro objetivo</h1>        
             <h3>generar los reportes de evaluación pertinentes, que integrarán los productos de la planeación y la evaluación institucional</h3>
         </hgroup>       
-        <button class="btn btn-hero btn-lg" role="button"><strong>Ver más</strong></button>
+        <a ng-href="#/organigrama" class="btn btn-hero btn-lg" ><strong>Ver más</strong></a>
       </div>
     </div>
     <!--~~~~~~~~
@@ -54,7 +54,7 @@
             <h1>equipo de trabajo primordial</h1>        
             <h3>compartimos una responsabilidad con todas las unidades academicas y administrativas de rectoría</h3>
         </hgroup>
-        <button class="btn btn-hero btn-lg" role="button"><strong>Ver más</strong></button>
+        <a ng-href="#/organigrama" class="btn btn-hero btn-lg"><strong>Ver más</strong></a>
       </div>
     </div>
   </div> 
