--- a/app/styles/main.css
+++ b/app/styles/main.css
@@ -444,6 +444,8 @@ h4.estasAquiTexto{
     outline: none !important;
     margin: 20px auto;
     border: 2px solid;
+    font-size: 16px;
+    margin-top: 30px; 
 }
 .btn.btn-hero:hover{
     color: #2c3e50;
